Fix for footer text on smaller screens

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -9,27 +9,38 @@
     display: flex;
     flex-direction: column;
 
-    @include size-laptop() {
+    @include size-laptopS() {
       flex-direction: row;
     }
   }
 
   &__content {
-    @include size-laptop() {
+    @include size-laptopS() {
       width: 50%;
     }
 
     &.right {
       display: flex;
-      margin-top: 30px;
+      flex-direction: column;
+      margin-top: 24px;
 
-      @include size-laptop() {
+      @include size-tablet() {
+        flex-direction: row;
+      }
+
+      @include size-laptopS() {
         margin-top: 0;
       }
 
       .footer__text {
-        margin-top: 0;
-        margin-left: 20px;
+        margin-top: 24px;
+        margin-left: 0;
+
+        @include size-tablet() {
+          margin-top: 0;
+          margin-left: 20px;
+
+        }
       }
     }
   }
